[package]
name = "takoyaki_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.29"
tokio = { version = "1.23.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
colored = "2.0.0"
dirs = "4.0.0"
downloader = "0.2.6"

