[package]
name = "takoyaki_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.5.10"
dirs = "4.0.0"
reqwest = { version = "0.11", features = ["json"] }
colorsys = "0.6.6"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }

