[package]
name = "takoyaki_plugin_deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
dirs = "4.0.0"
tokio-util = { version = "0.7.4", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
streamer = { version = "0.1.2", features = ["hyper"] }
cargo_toml = "0.13.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json" , "stream", "multipart"] }
futures = "0.3.25"
dotenv = "0.15.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

