[package]
name = "takoyaki_plugin_deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
either = { version = "1.8.0", features = ["serde"] }
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
cargo_toml = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

